# arctic_dp

./: .gitattributes  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_FINAL.md  FIX_SUMMARY.md  Makefile  README_SCI1_EXPERIMENTS.md  conftest.py  pyproject.toml
code/: FIX_CPU_PARALLEL_SUMMARY.md  FIX_P0_SUBMISSION_SUMMARY.md  FIX_THEORY_TOP_JOURNAL_SUMMARY.md  Makefile  README_SCI1_EXPERIMENTS.md  conftest.py  pyproject.toml  run_all.py
code/docs/: DATA_SCALE_LIMITATIONS.md  HOCBF_ACTIVATION_AND_SWITCHING.md  METHOD_HOCBF_LIMITATIONS.md  METHOD_THEORETICAL_ASSUMPTIONS.md  METHOD_THEORY_SKETCH.md  NMPC_TERMINAL_COST_DERIVATION.md
code/scripts/: download_data.py  download_missing_data.py  quantify_spatial_variability.py  regenerate_calibration_report.py  setup_credentials.py  update_manifest_checksums.py
configs/sci1/: sci1_ablation.yaml  sci1_data_sensitivity.yaml  sci1_paper_full.yaml  sci1_paper_small.yaml  sci1_runtime.yaml  sci1_smoke.yaml  sci1_submission.yaml
configs/vessels/: xuelong2_like.yaml
data/sci1_sources/: CALIBRATION_REPORT.md  README.md  data_manifest.json  generate_mock_velocity.py  spatial_variability.json
scripts/: download_data.py  run_sci1_experiments.py  setup_credentials.py
src/arctic_quasi_dp/: __init__.py
tests/sci1/: test_data_bridge.py  test_empty_controller_skip_handling.py  test_ice_model_provenance.py  test_metrics_effect_size_direction.py  test_nmpc_casadi_build.py  test_no_oracle_ice_leakage.py  test_sci1_controllers.py  test_sci1_integration.py  test_sim_loop.py  test_sim_loop_uses_shared_dynamics.py  test_thruster.py  (+4 more)
(+195 files in other folders)
